crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_empty.snap
---
source: crates/hdx_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 8
      },
      "space": {
        "kind": "Whitespace",
        "offset": 8,
        "len": 1
      },
      "string": {
        "kind": "String",
        "offset": 9,
        "len": 7
      },
      "semicolon": {
        "kind": "Semicolon",
        "offset": 16,
        "len": 1
      }
    }
  ]
}
