crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_no_params.snap
---
source: crates/csskit_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "PageRule",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 5
      },
      "selectors": null,
      "block": {
        "type": "PageRuleBlock",
        "open": {
          "kind": "LeftCurly",
          "offset": 5,
          "len": 1
        },
        "properties": [],
        "rules": [],
        "close": {
          "kind": "RightCurly",
          "offset": 7,
          "len": 1
        }
      }
    }
  ]
}
