crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_params.snap
---
source: crates/csskit_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "MozDocumentRule",
      "at_keyword": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 14
      },
      "matchers": [
        [
          {
            "UrlFunction": [
              {
                "kind": "Function",
                "offset": 38,
                "len": 4
              },
              {
                "kind": "String",
                "offset": 42,
                "len": 15
              },
              {
                "kind": "RightParen",
                "offset": 57,
                "len": 1
              }
            ]
          },
          null
        ]
      ],
      "block": {
        "type": "DocumentRuleBlock",
        "open": {
          "kind": "LeftCurly",
          "offset": 67,
          "len": 1
        },
        "rules": [],
        "close": {
          "kind": "RightCurly",
          "offset": 68,
          "len": 1
        }
      }
    }
  ]
}
