crates/css_ast/tests/snapshots/postcss_snapshots__postcss_comments.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "Div": {
                    "kind": "Ident",
                    "offset": 36,
                    "len": 3
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 40,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 63,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 68,
              "len": 1
            },
            "value": {
              "Named": {
                "Black": {
                  "kind": "Ident",
                  "offset": 70,
                  "len": 5
                }
              }
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 75,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 99,
              "len": 13
            },
            "colon": {
              "kind": "Colon",
              "offset": 112,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 113,
                  "len": 1
                },
                {
                  "kind": "Dimension",
                  "offset": 114,
                  "len": 3,
                  "unit": "px"
                },
                {
                  "kind": "Whitespace",
                  "offset": 117,
                  "len": 1
                },
                {
                  "kind": "Delim",
                  "offset": 118,
                  "len": 1
                },
                {
                  "kind": "Whitespace",
                  "offset": 119,
                  "len": 1
                },
                {
                  "kind": "Dimension",
                  "offset": 120,
                  "len": 3,
                  "unit": "px"
                }
              ]
            },
            "important": null
          },
          null
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 138,
        "len": 1
      }
    },
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 149,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 151,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 157,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 162,
              "len": 1
            },
            "value": {
              "Named": {
                "Black": {
                  "kind": "Ident",
                  "offset": 164,
                  "len": 5
                }
              }
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 169,
            "len": 1
          }
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 183,
        "len": 1
      }
    },
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "class",
              "value": {
                "type": "Class",
                "dot": {
                  "kind": "Delim",
                  "offset": 186,
                  "len": 1
                },
                "name": {
                  "kind": "Ident",
                  "offset": 187,
                  "len": 2
                }
              }
            },
            {
              "type": "tag",
              "value": {
                "Unknown": {
                  "kind": "Ident",
                  "offset": 193,
                  "len": 4
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 198,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 202,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 207,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 208,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 209,
                  "len": 3
                },
                {
                  "type": "SimpleBlock",
                  "start": 212,
                  "open": {
                    "kind": "LeftParen",
                    "len": 1
                  },
                  "values": {
                    "values": [
                      {
                        "kind": "Ident",
                        "offset": 217,
                        "len": 8
                      }
                    ]
                  },
                  "close": {
                    "kind": "RightParen",
                    "len": 1
                  }
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 226,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 230,
              "len": 11
            },
            "colon": {
              "kind": "Colon",
              "offset": 241,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 242,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 243,
                  "len": 10
                },
                {
                  "kind": "Comma",
                  "offset": 253,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 258,
                  "len": 5
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 263,
            "len": 1
          }
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 265,
        "len": 1
      }
    }
  ]
}
