crates/css_ast/tests/snapshots/postcss_snapshots__postcss_decls.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 2,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 8,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 13,
              "len": 1
            },
            "value": {
              "Named": {
                "Black": {
                  "kind": "Ident",
                  "offset": 15,
                  "len": 5
                }
              }
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 20,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 26,
              "len": 10
            },
            "colon": {
              "kind": "Colon",
              "offset": 36,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 37,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 38,
                  "len": 5
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 43,
            "len": 1
          }
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 45,
        "len": 1
      }
    }
  ]
}
