crates/css_ast/tests/snapshots/postcss_snapshots__postcss_empty.snap
---
source: crates/csskit_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": []
}
